:lipstick: Fix code-style errors